Aula 8.6 Implementando o fluxo de chamada do controller para o service
